# fbet_ui

./: .gitignore  .prettierrc.json  README.md  capacitor.config.ts  components.json  docker-compose.dev.yml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  postcss.config.mjs  prod_diff.sql  prod_fix.sql  server.js  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: test.yml
api/: .gitignore  README.md  index.py  init_db.py  pyproject.toml  requirements.txt  vercel.json
api/app/: config.py  database.py  main.py  security.py
api/app/crud/: event.py  group.py  group_membership.py  tip.py  user.py
api/app/dependencies/: auth.py
api/app/models/: event.py  group.py  group_membership.py  tip.py  user.py
api/app/routers/: event.py  group.py  group_membership.py  tip.py  user.py
api/app/schemas/: event.py  group.py  group_membership.py  tip.py  user.py
api/app/services/: espn_scraper.py  ufc_calendar.py
api/tests/: conftest.py  test_auth_flow.py  test_event_flow.py  test_full_flow.py  test_group_flow.py  test_tip_flow.py
api/tests/helpers/: api_helpers.py
prisma/: schema.prisma
public/: robots.txt  sw.js
public/.well-known/: apple-app-site-association
src/app/: globals.css  layout.tsx  manifest.json  page.tsx
src/context/: AuthContext.tsx
src/hooks/: useDashboardData.ts  useGroupInteractions.ts
src/lib/: api.ts  types.ts
src/testing/: setup.ts
tests/: add-event-dialog.spec.ts  global-setup.ts  global-teardown.ts  group.spec.ts  login.spec.ts  register.spec.ts  smoke.spec.ts  workflow.spec.ts
tests/auth/: login.spec.ts  (+1 more)
(+229 files in other folders)
